# score_dot_github

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  org_config.toml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1a_FeatureRequest.yml  1b_ComponentenRequest.yml  2_ProductIncrement.yml  3_Epic.yml  4_Task.yml  5_Bug.yml
.github/references/: agent-card.schema.json  repo-manifest.schema.json
.github/score/: repo-manifest.json
.github/workflows/: refresh-profile.yml
docs/: repo-overview-tool-design.md
profile/: README.md  metrics.md
src/generate_repo_overview/: README.md  __init__.py  _html_common.py  _html_detail.py  _html_index.py  _text_utils.py  cli.py  console.py  constants.py  metrics_html.py  metrics_report.py  models.py  org_config.py  profile_readme.py  profile_readme_config.toml
src/generate_repo_overview/collector/: __init__.py  git_checkout.py  reference_integration.py  registry_metadata.py  repo_entry.py  signal_detection.py  snapshot_io.py  traceability.py
src/generate_repo_overview/templates/: index.js  profile_readme.md  styles.css
src/profile_readme_generator/: __init__.py  generator.py
src/profile_readme_generator/templates/: profile_readme.md
tests/: test_cli.py  test_cli_render.py  test_generator.py  test_org_config.py  test_repo_overview.py  test_traceability.py
