[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "profile-readme-generator"
version = "0.0.0"
description = "Generate the eclipse-score organization profile README from GitHub repository properties"
requires-python = ">=3.12"
dependencies = [
  "PyGithub",
]

[project.scripts]
generate-profile-readme = "profile_readme_generator.generator:main"

[dependency-groups]
dev = [
  "basedpyright",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/profile_readme_generator"]

[tool.hatch.build.targets.wheel.force-include]
"src/profile_readme_generator/templates" = "profile_readme_generator/templates"
"src/profile_readme_generator/profile_readme_config.toml" = "profile_readme_generator/profile_readme_config.toml"

[tool.uv]
package = true

[tool.ruff]
src = ["src", "tests", "scripts"]
target-version = "py312"
exclude = [
  "scripts/collect_metrics.py",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "C90",
  "SIM",
  "TCH",
  "TID",
  "RUF",
  "PT",
  "PIE",
  "T20",
  "RSE",
  "RET",
]
ignore = [
  "E501",
  "T201",
  "RET505",
]

[tool.ruff.lint.isort]
known-first-party = ["profile_readme_generator"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
  "--strict-config",
]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownVariableType = "warning"
reportUnusedVariable = "warning"
include = [
  "src",
  "scripts",
  "tests",
]
exclude = [
  "**/__pycache__",
  "**/.*",
  ".venv*/**",
  "build",
  "dist",
  "scripts/collect_metrics.py",
]
venvPath = "."
venv = ".venv"
