[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "generate-repo-overview"
version = "0.0.0"
description = "Collect cached GitHub organization overviews and render Markdown reports"
requires-python = ">=3.12"
dependencies = [
  "PyGithub",
  "tqdm",
]

[project.scripts]
generate-repo-overview = "generate_repo_overview.cli:main"

[dependency-groups]
dev = [
  "basedpyright",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/generate_repo_overview"]

[tool.hatch.build.targets.wheel.force-include]
"src/generate_repo_overview/templates" = "generate_repo_overview/templates"
"src/generate_repo_overview/profile_readme_config.toml" = "generate_repo_overview/profile_readme_config.toml"

[tool.uv]
package = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "C90",
  "SIM",
  "TCH",
  "TID",
  "RUF",
  "PT",
  "PIE",
  "T20",
  "RSE",
  "RET",
]
ignore = [
  "E501",
  "T201",
  "RET505",
]

[tool.ruff.lint.isort]
known-first-party = ["generate_repo_overview"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
  "--strict-config",
]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownVariableType = "warning"
reportUnusedVariable = "warning"
include = [
  "src",
  "tests",
]
exclude = [
  "**/__pycache__",
  "**/.*",
  ".venv*/**",
  "build",
  "dist",
]
venvPath = "."
venv = ".venv"
